# chronicler

./: .gitattributes  .gitignore  BUILD  LICENSE  MODULE.bazel  Makefile  README.md  TODO.md  WORKSPACE  build.sh  chronicler.code-workspace  chronicler.go  config.go  go.mod  keys  main.go  precommit.sh  resolver.go  staticcheck.conf  update_types.py  view.py
.old/: LICENSE
.old/adapter/: BUILD
.old/chronicler/: chronicler.go  chronicler_test.go
.old/frontend/: server_test.go
.old/resolver/: downloader.go  resolver.go
.old/status/: server.go  status.proto  statusserver.go
.old/storage/: BUILD  localstorage_test.go
.old/util/: textdata_test.go
.old/webdriver/: browser.go  geckodriver.go  requestbuilder.go
adapter/: BUILD  adapter.go  adapter_test.go  pikabu.go  pikabu_test.go  scheduler.go  telegram.go  telegram_test.go  testutil.go  twitter.go  twitter_test.go  web.go  web_test.go
adapter/adaptertest/: adaptertest.go
adapter/fourchan/: adapter.go  adapter_test.go  client.go
adapter/pikabu/: BUILD  adapter.go  adapter_test.go  client.go  client_test.go  parser.go  parser_test.go  pikabu.go  pikabu_adapter.go  pikabu_test.go  sourceprovider.go  tree_resolver.go  tree_resolver_test.go
adapter/reddit/: adapter.go  adapter_test.go  client.go  client_test.go  reddit-out.json  types.go
adapter/telegram/: BUILD  telegram.go  telegram_test.go
adapter/testdata/: page.html  telegram_multiple_updates.json  telegram_multiple_updates_record.json  telegram_one_update.json  telegram_one_update_record.json  web_hello_record.json
adapter/tiktok/: BUILD  tiktok.go
adapter/twitter/: BUILD  adapter.go  adapter_test.go  client.go  client_test.go  twitter.go  twitter_test.go  types.go
adapter/web/: BUILD  adapter.go  (+4 more)
chronicler/: BUILD  chronicler.go  chronicler_test.go  config.go  telegram.go  telegram_test.go  twitter.go  web.go
chronist/: BUILD  chronist.go  chronist_test.go  main.go  twitter.go
common/: downloader.go  net.go  text.go  text_test.go  uuid.go
docker/: BUILD  Dockerfile  README  default.env  docker-compose.yaml  entrypoint.sh  telegram
downloader/: BUILD  downloader.go  downloader_test.go
firefox/: BUILD  firefox.go  main.go  marionette.go  webdriver.go
frontend/: BUILD  main.go  pathparam_handler.go  pathparam_handler_test.go  server.go  server_test.go
iferr/: iferr.go  iferr_test.go
maybe/: BUILD  maybe.go  maybe_test.go
old/: README.md
parser/: html.go  htmlreader.go  htmlreader_test.go
proto/: BUILD  Makefile  objects.proto  objects_test.go  records.proto
records/: BUILD  records.go  records.proto  records_test.go  sort.go
resolver/: BUILD  downloader.go  downloader_test.go  httpdownloader.go  resolver.go  resolver_test.go
scenarios/: BUILD  pikabu_cleanup.js  pikabu_expand_all.js  scenarios.json  wait_load.js
scripts/: update_types.py
status/: BUILD  client.go  server.go  status.go  status.proto  status_test.go  statusserver.go
storage/: BUILD  blockstorage.go  blockstorage_test.go  client.go  endpoint.proto  http_downloader.go  localstorage.go  localstorage_test.go  main.go  overlay.go  overlay_test.go  relative_fs.go  relative_fs_test.go  server.go  storage.go  storage_test.go
telegram/: BUILD  bot.go  telegram.go  telegram.proto  update_types.py  utils.go
tinyhtml/: BUILD  go.mod  html.go  tinyhtml_test.go  tokenizer.go
twitter/: BUILD  main.go  twitter.go  twitter_test.go  twitter_types.go
util/: BUILD  collections_test.go  common.go  logging.go  maps.go  maps_test.go  nulls.go  nulls_test.go  runners.go  runners_test.go  textdata.go  textdata_test.go  uuid.go  uuid_test.go  waiter.go
viewer/: exporter.go  exporter_test.go  viewer.go  viewer_test.go
watchdog/: BUILD  main.go
web/: BUILD  htmlparser.go  main.go  tokenizer.go  tokenizer_test.go
webdriver/: BUILD  browser.go  firefox.go  geckodriver.go  marionette.go  scenario_webdriver.go  scenarios.go  scenarios_test.go  service.go  webdriver.go
(+118 files in other folders)
