module (name = "chronicler", repo_name = "org_lanseg_chronicler", version = "0.1")

bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_go", version = "0.44.0")
bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "golang-commons", version = "0.1")
bazel_dep(name = "tgbot", version = "0.1")

git_override(
  module_name = "golang-commons", 
  remote = "https://github.com/lanseg/golang-commons.git", 
  commit = "origin/main"
)

git_override(
  module_name = "tgbot", 
  remote = "https://github.com/lanseg/tgbot.git", 
  commit = "origin/main"
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

go_deps.module(
  path = "google.golang.org/grpc",
  version = "v1.61.0",
  sum = "h1:TOvOcuXn30kRao+gfcvsebNEa5iZIiLkisYEkf7R7o0=",
)

go_deps.module(
  path = "golang.org/x/text",
  version = "v0.14.0",
  sum = "h1:ScX5w1eTa3QqT8oi6+ziP7dTV1S2+ALU0bI+0zXKWiQ=",
)

use_repo(
  go_deps,
  "org_golang_google_grpc",
  "org_golang_x_text",
)
